feat: role dto
